# korf-c2swarm

./: .dockerignore  .gitignore  Cargo.toml  DRAFT_ONE.md  README.md  docker-compose.yml  kommander.dockerfile  todo.txt
_parked/kommander/src/: main.rs
_parked/kommander/src/data/: db.rs  mod.rs
_parked/kommander/src/node/: server.rs
_parked/kommander/src/web/: api.rs  mod.rs
_parked/nodus/src/: main.rs
_parked/nodus_asym_sec/: Cargo.toml
dev_logs/: 2026_03_02.md  2026_03_05.md  2026_04_08.md
ed25519/: Cargo.toml
ed25519/src/: lib.rs
kommander/: .dockerignore  Cargo.toml  Dockerfile  README.md
kommander/app/: Cargo.toml
kommander/app/src/: main.rs
kommander/data/: Cargo.toml
kommander/data/migrations/: 20260408_001_initial.sql
kommander/data/src/: lib.rs
kommander/data/src/ports/: health.rs
kommander/data/src/repositories/: node.rs
kommander/data/src/repositories/node/: command.rs  log.rs  mod.rs
kommander/domain/: Cargo.toml
kommander/domain/src/: lib.rs  node.rs
kommander/domain/src/node/: command.rs  log.rs  mod.rs
kommander/domain/src/ports/: health.rs  mod.rs
kommander/domain/src/repositories/: node.rs
kommander/nodecom/: Cargo.toml
kommander/nodecom/src/: lib.rs  protocol.rs
kommander/nodecom/src/udp/: mod.rs  protocol.rs
kommander/src/: main.rs
kommander/src/db/: mod.rs  models.rs
kommander/src/node/: protocol.rs  server.rs
kommander/src/web/: api.rs
kommander/src/web/gui/: angular.json
kommander/src/web/gui/src/app/: app.html  app.routes.ts  app.ts
kommander/src/web/gui/src/app/models/: node.model.ts
kommander/src/web/gui/src/app/pages/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
kommander/src/web/gui/src/app/services/: node.service.ts
kommander/web/: Cargo.toml
kommander/web/gui/: README.md  angular.json  package-lock.json  package.json
kommander/web/gui/src/: index.html  styles.scss
kommander/web/gui/src/app/: app.html  app.scss  app.ts
kommander/web/gui/src/app/models/: command.model.ts  health.model.ts  node-command-labels.ts  node-command.model.ts  node-log-labels.ts  node-log.model.ts  node.model.ts
kommander/web/gui/src/app/pages/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
kommander/web/gui/src/app/services/: api.constants.ts  command.service.ts  health.service.ts  node.service.ts
kommander/web/src/: api.rs  lib.rs
kommander/web/src/api/: app.rs  mod.rs  nodes.rs
nodus/: Cargo.toml  README.md
nodus/asymsec/: Cargo.toml
nodus/asymsec/src/: ed25519.rs
nodus/nodus/: Cargo.toml
nodus/nodus/src/: identity.rs  main.rs
nodus/nodus/src/c2com/: mod.rs  payloads.rs  reach.rs
nodus/nodus/src/registration/: errors.rs  mod.rs  types.rs
nodus/src/: anti_analysis.rs  identity.rs  main.rs
nodus/src/c2com/: mod.rs  payloads.rs
nodus/src/registration/: errors.rs  mod.rs
nodus_asym_sec/src/: lib.rs
