[package]
name = "kommander"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
    "migrate",
    "uuid",
] }
uuid = { version = "1", features = ["serde", "v4"] }
tower-http = { version = "0.6.8", features = ["fs"] }
