[package]
name = "nodus"
version = "0.1.0"
edition = "2024"

[dependencies]
base85 = "2.0.0"
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
libc = "0.2.182"
mac_address = "1.1.8"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
whoami = "2.1.1"
