[package]
name = "nodus"
version = "0.1.0"
edition = "2024"

[dependencies]
base85 = "2.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hickory-resolver = { version = "0.25.2", features = ["tokio"] }
libc = "0.2.182"
mac_address = "1.1.8"
rand = "0.10.0"
rand_core = "0.10.0"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
whoami = "2.1.1"
