[package]
name = "nodus"
version = "0.1.0"
edition = "2024"

[dependencies]
korf-ed25519 = { path = "../ed25519" }
rand = "0.8.5"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
base85 = "2.0.0"
sha2 = "0.10.9"
hickory-resolver = { version = "0.25.2", features = [
    "tokio",
] } # for DNS querying
libc = "0.2.182" # for anti analysis checking
mac_address = "1.1.8"
whoami = "2.1.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
