[package]
name = "nodecom"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
domain = { path = "../domain" }
data = { path = "../data" }
korf-ed25519 = { path = "../../ed25519" }